# anthropic_mcp_python_try

./: .gitignore  orchestration_flow_diagram.xml  uml_class_diagram.xml
blog/: README.md  blog.py  pyproject.toml
mcp-client/: PERSONAS.md  client.py  pyproject.toml  select_persona.py
mcp-client/personas/: blog_bot.py  creative_writer.py  professional_editor.py
orchestrator/: README.md  blog_workflow.py  check_content.py  examples.py  main.py  pyproject.toml  requirements.txt
orchestrator/personas/: creative_writer.py  professional_editor.py
orchestrator/utils/: README.md  workflow_utils.py
